--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
 
         /* Different background images for different times of the day */
         .morning {
-            background-image: url('image/Morning.jpg');
+            background-image: url('Morning.jpg');
         }
 
         .afternoon {
-            background-image: url('image/SUnny.jpg');
+            background-image: url('SUnny.jpg');
         }
 
         .evening {
-            background-image: url("image/evening.jpg");
+            background-image: url("evening.jpg");
         }
 
         .night {
-            background-image: url('image/Night.jpg');
+            background-image: url('Night.jpg');
         }
     </style>
 </head>
